fix: swiper on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -591,6 +591,12 @@ img {
   width: 350px;
 }
 
+@media screen and (max-width: 768px) {
+  .projects__swiper .swiper-slide {
+    width: 100%;
+  }
+}
+
 .projects{
   width:100%;
   height:100vh;
